Modified code-library page

--- a/static/code-library/index.html
+++ b/static/code-library/index.html
@@ -95,6 +95,14 @@
           >more recycle symbols ⧉</a
         >
       </p>
+      <p>
+        <a
+          href="https://www.ee.ucl.ac.uk/~mflanaga/java/HTMLandASCIItableC1.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >A more all-inclusive list:</a
+        >
+      </p>
       <h4>Counting in Multiples</h4>
       <ol>
         <li>Single</li>
