Organized images folder. Improved Artist page layout. Added blurb for Character/Creature section

--- a/static/code-library/index.html
+++ b/static/code-library/index.html
@@ -100,10 +100,10 @@
           href="https://www.ee.ucl.ac.uk/~mflanaga/java/HTMLandASCIItableC1.html"
           target="_blank"
           rel="noopener noreferrer"
-          >A more all-inclusive list:</a
+          >A more all-inclusive list</a
         >
       </p>
-      <h4>Counting in Multiples</h4>
+      <h4>Counting in Multiples ⧉</h4>
       <ol>
         <li>Single</li>
         <li>Double</li>
