--- a/static/code-library/index.html
+++ b/static/code-library/index.html
@@ -207,52 +207,10 @@
         <strong>Check what IP address a domain name is resolving to:</strong>
         <code>ping domain.name</code>
       </p>
-      <h3>
-        Donate to me so I can have time to build plugins!<img
-          decoding="async"
-          src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-          alt=""
-          width="1"
-          height="1"
-          border="0"
-        />
-      </h3>
-      <form
-        action="https://www.paypal.com/cgi-bin/webscr"
-        method="post"
-        target="_top"
-      >
-        <table>
-          <tbody>
-            <tr>
-              <td>
-                <input
-                  name="on0"
-                  type="hidden"
-                  value="Please give your ticket a name"
-                />What you are donating to me for:
-              </td>
-            </tr>
-            <tr>
-              <td><input maxlength="200" name="os0" type="text" /></td>
-            </tr>
-            <tr>
-              <td>Best way to contact you, so I can thank you:</td>
-            </tr>
-            <tr>
-              <td><input maxlength="200" name="os1" type="text" /></td>
-            </tr>
-          </tbody>
-        </table>
-        <p>
-          <input
-            alt="PayPal - The safer, easier way to pay online!"
-            name="submit"
-            src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif"
-            type="image"
-          />
-        </p>
-      </form>
+      <h3>Commands to remember</h3>
+      <pre>
+          $ babel &lt;source-file&gt; --out-file=&lt;public-file&gt; --presets=env,react --watch
+      </pre>
       <p>
         <a href="https://stackoverflow.com/users/1383937/joe-rhoney"
           ><br />
