Removed scroll-snap on html tag (too disruptive). Created .u-jump-lnk class to use in place of [id], so scroll-margin-top isn't applied to all ids automatically. Minor update to my crappy out-dated code-library (I really need to update that page).

--- a/static/code-library/index.html
+++ b/static/code-library/index.html
@@ -1,14 +1,27 @@
 <html>
   <head>
     <title>Code Library | :joe rhoney</title>
+    <style>
+      a[target="_blank"]::after {
+        border: 0.14em solid currentColor;
+        border-radius: 0.3em;
+        content: "\2197";
+        font-family: monospace;
+        font-size: 0.75em;
+        font-weight: bold;
+        letter-spacing: 0.25em;
+        margin-left: 0.3em;
+        padding-left: 0.18em;
+        text-decoration: none;
+        vertical-align: middle;
+      }
+    </style>
   </head>
   <body>
     <div id="content-body" class="content-body content">
       <p>
-        This is my temporary (unorganized) code library location. You hit the
-        jackpot. :j
+        This is my temporary (unorganized, out-dated) code library location.
       </p>
-      <h4>Latest Discovery</h4>
       <p>Add html5shiv in WordPress theme without browser sniffing:</p>
       <p>
         <code
@@ -27,8 +40,16 @@
           href="https://www.toptal.com/designers/htmlarrows/"
           target="_blank"
           rel="noopener noreferrer"
-          >Go here ↗</a
+          >Go here</a
         >
+      </p>
+      <p>
+        <a
+          href="https://en.wikipedia.org/wiki/Box-drawing_characters"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Box Drawing
+        </a>
       </p>
       <h5>Rare</h5>
       <p>
@@ -56,7 +77,7 @@
           href="http://graphemica.com/%E2%9C%A9"
           target="_blank"
           rel="noopener noreferrer"
-          >more stars ⧉</a
+          >more stars</a
         ><br />
         <code>&amp;#9711</code> &nbsp;= &nbsp;◯<br />
         <code>&amp;#9898</code> &nbsp;= &nbsp;⚪<br />
@@ -65,7 +86,7 @@
           href="http://graphemica.com/○"
           target="_blank"
           rel="noopener noreferrer"
-          >more circles ⧉</a
+          >more circles</a
         ><br />
         <code>&amp;#9698</code> &nbsp;= &nbsp;◢<br />
         <code>&amp;#9699</code> &nbsp;= &nbsp;◣<br />
@@ -75,7 +96,7 @@
           href="http://graphemica.com/%E2%96%B2"
           target="_blank"
           rel="noopener noreferrer"
-          >more triangles ⧉</a
+          >more triangles</a
         ><br />
         <code>&amp;#11153;</code> &nbsp;= &nbsp;⮑<br />
         <code>&amp;#8634</code> &nbsp;= &nbsp;↺<br />
@@ -92,7 +113,7 @@
           href="http://graphemica.com/%E2%99%B2"
           target="_blank"
           rel="noopener noreferrer"
-          >more recycle symbols ⧉</a
+          >more recycle symbols</a
         >
       </p>
       <p>
@@ -103,7 +124,7 @@
           >A more all-inclusive list</a
         >
       </p>
-      <h4>Counting in Multiples ⧉</h4>
+      <h4>Counting in Multiples</h4>
       <ol>
         <li>Single</li>
         <li>Double</li>
